--- a/dataset-renderer/src/index.html
+++ b/dataset-renderer/src/index.html
@@ -9,6 +9,6 @@
     <div id="root">
 
     </div>
-    <script type="module" src="index.js"></script>
+    <script type="module" defer src="index.js"></script>
 </body>
 </html>
